tests/paczka1/small_fuzzy/37634614.err
Error in line 1: S814 S634 66,8
Error in line 6: qaWKW3ZJW S778 18,3
